<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UstoNote</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_view">LIST OF AFFICHAGE</string>
    <string name="btn_add">ADDING</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="Module">Module</string>
    <string name="Sections">Section</string>
    <string name="Year">Year</string>
    <string name="Groupe">Groupe</string>
    <string name="btn_AddAffichage">CONFIRMER</string>


    <string name="loading">Loading…</string>

    <string name="NoData">Sorry ! i cant find any data</string>
    <string name="email_example">example@mail.com</string>
    <string name="email_validation">Email validation</string>
    <string name="valider_mon_mail">VALIDATE MY EMAIL</string>
    <string name="Adding_choisir">Please choose an image for the affichage</string>
    <string name="choisir">CHOOSE !</string>
    <string name="affichage_image">Affichage image</string>
    <string name="all_affichage">All Affichage</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="search">Search</string>
    <string name="delete_current_search">Delete current search</string>
    <string name="licence_master">Licence / Master</string>
    <string name="delete">Delete</string>
    <string name="rechercher">Search</string>
    <string name="grade">Grade</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="AlertDialogue_Message">Are you sure you want to delete this view?</string>
    <string name="AlertDialogue_Title">Confirmation of deletion</string>
    <string name="Yes">Yes</string>
    <string name="All">All</string>
    <string name="SelectSection">Select the section</string>
    <string name="SelectGroupe">Select the groupe</string>
    <string name="SelectGrade">Select the grade</string>
    <string name="email_sent">Verification email sent to</string>
    <string name="email_sentFail">Failed to send verification email.</string>
    <string name="created_by">Created by:</string>


    <string-array name="year">
        <item>Select the grade</item>

        <item>Licence 1</item>
        <item>Licence 2</item>
        <item>Licence 3</item>
        <item>Master 1</item>
        <item>Master 2</item>
    </string-array>

    <string-array name="section">
        <item>Select the section</item>

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string-array name="Groupe">
        <item>Select the groupe</item>

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="sort_by">
        <item>Sort by date</item>
        <item>Sort by grade</item>
    </string-array>

</resources>
