<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#98fffefe"
    tools:ignore="PrivateResource">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24sp"
            tools:text="@string/hint_name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="@string/email_example" />

        <TextView
            android:id="@+id/EmailV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="@string/email_validation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="0dp"
            android:background="#ffff00"
            android:text="@string/valider_mon_mail"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#3ea9e2"
            android:text="@string/btn_view"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnAdding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="0dp"
            android:background="#26f09c"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="0dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

</RelativeLayout>