<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/affichage_image" />

        <TextView
            android:id="@+id/textNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/Adding_choisir"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonChoose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#010001"
            android:text="@string/choisir"
            android:textColor="@color/btn_login_bg"
            android:clickable="true"
            android:focusable="true" />

        <EditText

            android:id="@+id/ETModule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Module"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:visibility="gone" />


        <Spinner
            android:id="@+id/ETYears"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"

            android:hint="@string/Year"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:spinnerMode="dialog"
             />


        <EditText
            android:id="@+id/ETSections"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Sections"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ETGroupe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Groupe"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_AddAffichage"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>