<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/rechercher" />

    <!-- Food Type -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_year"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            android:src="@drawable/ic_year"
            android:contentDescription="@string/grade" />

        <Spinner
            android:id="@+id/spinner_year"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_year"
            android:entries="@array/year"
            android:layout_toEndOf="@+id/icon_year" />

    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_section"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            android:src="@drawable/ic_section"
            android:contentDescription="@string/Sections" />

        <Spinner
            android:id="@+id/spinner_section"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_section"
            android:entries="@array/section"
            android:layout_toEndOf="@+id/icon_section" />

    </RelativeLayout>

    <!-- Price -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_groupe"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            android:src="@drawable/ic_groupe"
            android:contentDescription="@string/Groupe" />
        <Spinner
            android:id="@+id/spinner_groupe"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_groupe"
            android:entries="@array/Groupe"
            android:layout_toEndOf="@+id/icon_groupe" />

    </RelativeLayout>

    <!-- Sort by -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_sort"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            android:src="@drawable/ic_sorted"
            android:contentDescription="@string/sort_by_date" />

        <Spinner
            android:id="@+id/spinner_sort"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_sort"
            android:entries="@array/sort_by"
            android:layout_toEndOf="@+id/icon_sort" />
    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>

