<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_login"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout

            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/ustologo"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="TODO"
                android:src="@mipmap/halaslogoimages" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:srcCompat="@drawable/paypal" />
        </LinearLayout>


    </LinearLayout>
