<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"

    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/filter_bar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaire"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/filter_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="12dp"
                    android:focusable="true"
                    tools:ignore="UnusedAttribute">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/button_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_filter_list_white_24px"
                            android:tint="@color/greySecondary"
                            android:contentDescription="@string/search" />

                        <LinearLayout
                            android:id="@+id/text_current_search_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/button_filter"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            tools:ignore="RelativeOverlap,RtlHardcoded">

                            <TextView
                                android:id="@+id/text_current_search"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all_affichage"
                                android:textColor="@color/greySecondary"
                                android:theme="@style/AppTheme.Body1"
                                tools:text="Filter" />

                            <TextView
                                android:id="@+id/text_current_sort_by"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sort_by_date"
                                android:textColor="@color/greyDisabled"
                                android:theme="@style/AppTheme.Caption" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/button_clear_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_close_white_24px"
                            android:tint="@color/greySecondary"
                            android:focusable="true"
                            tools:ignore="RtlHardcoded"
                            android:contentDescription="@string/delete_current_search" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </FrameLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/listView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                tools:listitem="@layout/affichage" />


            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/bg_shadow" />

            <TextView
                android:id="@+id/TextNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/NoData"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addAffichage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="34dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"

            app:srcCompat="@drawable/ic_add_white_24px"
            android:tint="#ffffff"
            app:backgroundTint="#f5d904"
            app:fabSize="normal" />


</RelativeLayout>